# SkillSwapHub

./: .replit  Pasted--2024-10-27-17-04-56-074-ERROR-in-app-Exception-on-GET-Traceback-most-recent-call-last-Fi-1730048743832.txt  Pasted--2024-10-27-17-17-13-711-ERROR-in-app-Exception-on-GET-Traceback-most-recent-call-last-Fi-1730049561855.txt  Pasted--2024-10-27-17-24-22-002-ERROR-in-app-Exception-on-matches-GET-Traceback-most-recent-call-last-1730049905106.txt  Pasted--2024-10-27-17-26-37-561-ERROR-in-app-Exception-on-matches-GET-Traceback-most-recent-call-last-1730050011987.txt  Pasted-1-Premium-Subscription-Tier-Enhanced-Matching-Premium-members-could-get-priority-in-matching-all-1730050615120.txt  Pasted-Here-s-a-fresh-and-unique-concept-a-Skill-Swap-app-that-matches-users-looking-to-learn-new-skills-1730046205997.txt  app.py  forms.py  models.py  pyproject.toml  routes.py  verify_columns.py
migrations/: add_skill_tracking_columns.py  add_subscription_columns.py  add_user_location.py
routes/: __init__.py  main.py  subscription.py
static/css/: custom.css
static/js/: main.js  video_chat.js
templates/: add_skill.html  base.html  challenge_detail.html  challenges.html  chat.html  class_detail.html  classes.html  create_challenge.html  create_class.html  create_meetup.html  edit_meetup.html  index.html  login.html  matches.html  meetup_detail.html  meetups.html  profile.html  register.html  search.html  video_chat.html  video_sessions.html
templates/subscription/: plans.html
utils/: achievements.py  gemini_matcher.py  subscription.py
