[project]
name = "repl-nix-skillswaphub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "google-generativeai>=0.8.3",
    "flask-socketio>=5.4.1",
    "simple-websocket>=1.1.0",
    "sqlalchemy",
]
